# joes_portfolio

./: Cargo.toml  Trunk.toml  build.sh  index.html  rust-toolchain
src/: app.rs  main.rs  nav.rs  profile.rs
