[package]
name = "joes_portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.2", features = ["csr", "nightly"] }
stylers = "0.3.2"

[build]
target = "wasm32-unknown-unknown"

# [target.'cfg(target_arch = "wasm32")']
# rustflags = ["-C", "target-feature=+atomics,+bulk-memory"]
